iter 01: logs streaming working now